--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </section>
 
     <div class="icons">
-        <a href="#"><i class="ri-instagram-line"></i></a>
-        <a href="#"><i class="ri-facebook-fill"></i></a>
-        <a href="#"><i class="ri-whatsapp-line"></i></a>
+        <a href="https://www.instagram.com/luciano.13.97/" target="_blank"><i class="ri-instagram-line"></i></a>
+        <a href="https://www.facebook.com/lucho091" target="_blank"><i class="ri-facebook-fill"></i></a>
+        <a href="https://wa.me/+5492644424973" target="_blank"><i class="ri-whatsapp-line"></i></a>
     </div>
 
     <div class="scroll-down">
